Refactor MultiIssuerValidator to enhance issuer normalization and logging; update issuer in application-smoke.yaml for consistency